--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "jquery": "^3.3.1",
+    "slick-carousel": "^1.8.1",
     "webpack": "^4.29.5"
   },
   "devDependencies": {
